--- a/src/main/webapp/static/mobile/css/app.css
+++ b/src/main/webapp/static/mobile/css/app.css
@@ -1402,4 +1402,4 @@ border-right: 1px solid #fff;border-top: 1px solid #fff;}
 .photoList {margin-left: 33%;}
 .step_num {text-align: center;color: #007aff;}
 .step_item {border: 1px #3daae9 solid;margin: 15px 15px;}
-.step_num_txt {}
+.oneBtn {left: 50%;margin-left: -41px;}
