--- a/src/main/webapp/static/mobile/css/app.css
+++ b/src/main/webapp/static/mobile/css/app.css
@@ -1406,3 +1406,5 @@ border-right: 1px solid #fff;border-top: 1px solid #fff;}
 .position_Re {position: relative;}
 .position_Ab {position: absolute;}
 .font-color {color: #40ABE9;}
+.border-btm {border-bottom: 1px solid #40ABE9;}
+
