--- a/src/main/webapp/static/mobile/css/app.css
+++ b/src/main/webapp/static/mobile/css/app.css
@@ -1407,4 +1407,5 @@ border-right: 1px solid #fff;border-top: 1px solid #fff;}
 .position_Ab {position: absolute;}
 .font-color {color: #40ABE9;}
 .border-btm {border-bottom: 1px solid #40ABE9;}
+.border-btm5 {border-bottom: 5px solid #efeff4;}
 
