--- a/src/main/webapp/static/mobile/css/app.css
+++ b/src/main/webapp/static/mobile/css/app.css
@@ -575,4 +575,4 @@ body{font-size: 15px;color:#3b3b3b;}
 .oneBtn {left: 50%;margin-left: -41px;}
 .font-color {color: #40ABE9;}
 .list-padding {padding: 10px 10px 0 10px;}
-
+.SearchBtnClass {margin: 60px auto;width: 80%;}
