--- a/src/main/webapp/static/mobile/css/app.css
+++ b/src/main/webapp/static/mobile/css/app.css
@@ -614,7 +614,7 @@ body{font-size: 15px;color:#3b3b3b;}
 .app_p20 button {margin-left: 17%;background-color: #40ABE9;color: #fff;}
 
 /*备货单审核 和 订单详情公用---产品信息*/
-.commodity input, .commodity label {padding: 0;font-size: 13px;}
+.commodity div.mui-input-row input, .commodity div.mui-input-row label {padding: 0;font-size: 13px;}
 
 /*备货单审核*/
 .photoParent {width: 15%;height: 220px;margin-right: 15px;}
