--- a/src/main/webapp/static/mobile/css/app.css
+++ b/src/main/webapp/static/mobile/css/app.css
@@ -572,7 +572,7 @@ body{font-size: 15px;color:#3b3b3b;}
 .app_text_indt10 {text-indent: 10px;}
 .app_text_indt15 {text-indent: 15px;}
 .app_text_alg_r {text-align: right;}
-.labelLf {padding: 10px 14px;line-height: 21px;width: 33%;font-weight: bold;}
+.labelLf {padding: 10px 14px;padding-left: 20px;line-height: 21px;width: 33%;font-weight: bold;}
 .labelri {width: 67%;float: right;padding: 14px 15px;height: auto;line-height: 21px;font-size: 16px;text-align: center;}
 .labelPto {width:30%}
 .labelri input {margin-right: 15px;}
@@ -581,7 +581,7 @@ body{font-size: 15px;color:#3b3b3b;}
 .step_item {border: 1px #3daae9 solid;margin: 15px 15px;}
 .oneBtn {left: 50%;margin-left: -41px;}
 .list-padding {padding: 10px 10px 0 10px;}
-
+.mui-input-row label~input.doubleInput {width: 30%;}/*一行有两个input*/
 
 
 /*红色 * 号，必填必选*/
@@ -634,7 +634,7 @@ body{font-size: 15px;color:#3b3b3b;}
 .app_p20 button {margin-left: 17%;background-color: #40ABE9;color: #fff;}
 
 /*备货单审核 和 订单详情公用---产品信息*/
-.commodity div.mui-input-row input, .commodity div.mui-input-row label {padding: 0;font-size: 13px;}
+.commodity div.mui-input-row input, .commodity div.mui-input-row label {padding: 0;font-size: 12px;}
 
 /*备货单审核*/
 .photoParent {width: 15%;height: 220px;margin-right: 15px;}
