--- a/src/main/webapp/static/mobile/css/app.css
+++ b/src/main/webapp/static/mobile/css/app.css
@@ -384,8 +384,8 @@ input[type=url],
 input[type=week],
 select, textarea{height: auto;padding:10px 15px;}
 .mui-input-group .mui-input-row{height: auto;background-color: #fff;}
-.mui-input-row label{padding:10px 15px;padding-left: 20px;padding-right: 10px;line-height:21px;width: 33%;font-weight: bold;}
-.mui-input-row label~input, .mui-input-row label~select, .mui-input-row label~textarea{width:67%}
+.mui-input-row label{padding:10px 15px;padding-left: 20px;padding-right: 10px;line-height:21px;width: 40%;font-weight: bold;}
+.mui-input-row label~input, .mui-input-row label~select, .mui-input-row label~textarea{width:60%}
 
 .mui-input-row label~select{padding-left: 0;padding-top: 6px;}
 
@@ -572,8 +572,8 @@ body{font-size: 15px;color:#3b3b3b;}
 .app_text_indt10 {text-indent: 10px;}
 .app_text_indt15 {text-indent: 15px;}
 .app_text_alg_r {text-align: right;}
-.labelLf {padding: 10px 14px;padding-left: 20px;line-height: 21px;width: 33%;font-weight: bold;}
-.labelri {width: 67%;float: right;padding: 14px 15px;height: auto;line-height: 21px;font-size: 16px;text-align: center;}
+.labelLf {padding: 10px 14px;padding-left: 20px;line-height: 21px;width: 35%;font-weight: bold;}
+.labelri {width: 60%;float: right;padding: 14px 15px;height: auto;line-height: 21px;font-size: 16px;}
 .labelPto {width:30%}
 .labelri input {margin-right: 15px;}
 .photoList {margin-left: 33%;}
@@ -656,3 +656,12 @@ body{font-size: 15px;color:#3b3b3b;}
 .labelParent{display: flex;justify-content: center;}
 .labelRi>li {float: left;}
 .labelRi div {width: 70px;margin: 5px 15px;border: 1px solid #40ABE9;border-radius: 5px;font-size: 13px;text-align: center;}
+
+
+/*字体颜色不兼容的解决:*/
+input[disabled],input:disabled,input.disabled{
+	color: #000;
+	/*-webkit-text-fill-color:#3b3b3b;*/
+	-webkit-opacity:1;
+	opacity: 1;
+}
