--- a/src/main/webapp/static/mobile/css/app.css
+++ b/src/main/webapp/static/mobile/css/app.css
@@ -128,6 +128,14 @@ input, select, textarea{font-size: 15px;}
 .app_color_invites{color:#9572CF;}
 .app_color_invite{color:#ee4343;}
 
+/*字体其他样式*/
+.app_nav_text_center {text-align: center;line-height: 44px;}
+.app_li_text_linhg {line-height: 30px;}
+.app_text_center {text-align: center;}
+.app_text_indt10 {text-indent: 10px;}
+.app_text_indt15 {text-indent: 15px;}
+.app_text_alg_r {text-align: right;}
+
 /*边框颜色*/
 .app_tline{border-top: 1px solid #ececec;}
 .app_bline{border-bottom: 1px solid #40ABE9;}
@@ -141,6 +149,7 @@ input, select, textarea{font-size: 15px;}
 
 .app_bline3{border-bottom: 1px solid #efeff4;}
 /*背景色*/
+.footClass {background-color: #40ABE9;}
 .app_bgf{background-color: #fff}
 .app_bgfff{background: #fff!important}
 .app_bgred{background:#e43111}
@@ -384,8 +393,7 @@ input[type=url],
 input[type=week],
 select, textarea{height: auto;padding:10px 15px;}
 .mui-input-group .mui-input-row{height: auto;background-color: #fff;}
-.mui-input-row label{padding:10px 15px;padding-left: 20px;padding-right: 10px;line-height:21px;width: 40%;font-weight: bold;}
-.mui-input-row label~input, .mui-input-row label~select, .mui-input-row label~textarea{width:60%}
+.mui-input-row label{padding:10px 15px;padding-right: 10px;line-height:21px;font-weight: bold;}
 
 .mui-input-row label~select{padding-left: 0;padding-top: 6px;}
 
@@ -505,19 +513,19 @@ select, textarea{height: auto;padding:10px 15px;}
 .mui-input-group:after{display: none;}
 .mui-input-group:before{display: none;}
 .app_inline{display: inline;}
+
 /*==主要容器背景颜色==*/
 html,body{}
 body{font-size: 15px;color:#3b3b3b;}
-.mui-content{
-	background-color:#fff;
-}
+.mui-content{background-color:#fff;}
+
 /*屏幕兼容*/
 @media only screen and (min-width:0px) and (max-width: 370px) {
- #app-frozen-detail-list .mui-table-view { margin: 10px 10px 0 10px; border-radius: 4px;}
- .app_txt_min .mui-h5,.app_txt_min .mui-h4 {font-size: 12px;}
- .app_box_banner_icon {top:35px}
- .app_buttons{width: 60%;}
- .app_lock_tips{height:30px;margin-top: 15px;}
+#app-frozen-detail-list .mui-table-view { margin: 10px 10px 0 10px; border-radius: 4px;}
+.app_txt_min .mui-h5,.app_txt_min .mui-h4 {font-size: 12px;}
+.app_box_banner_icon {top:35px}
+.app_buttons{width: 60%;}
+.app_lock_tips{height:30px;margin-top: 15px;}
 .app_input_group_lager.app_input_group .mui-input-row label{width: 36%; white-space: nowrap;}
 .app_input_group_lager.app_input_group .mui-input-row label~input{width: 64%;}
 .app_input_group_lager.app_input_group .mui-input-row label~input.app_vcode_input{width: 48%;}
@@ -560,18 +568,18 @@ body{font-size: 15px;color:#3b3b3b;}
 .app_dialog_list_box .app_lines span{background: #fff;padding: 0 15px;position: relative;top:-7px}
 
 /*自定义覆盖样式!*/
+.noneTxt {position: absolute;top: 50%;left: 50%;margin-left: -28px;}/*暂无数据样式*/
+.flowPath>li:last-child {color: #40ABE9;}/*流程最后一块内容*/
+.photoParent {width: 15%;height: 220px;margin-right: 15px;}
+.photoParent img {top: 50%;margin-top: -8px;width: 50px;}/*详情商品信息图片*/
+.operation li {padding: 0;list-style: none;height: 30px;}/*操作按钮栏*/
+.mui-table-view-chevron .mui-table-view-cell {padding-right: 0px;}
+
 .app_header{height: 44px;line-height: 44px;border-bottom: 1px solid #ccc;background-color: #40ABE9;}
 .app_content {padding-bottom: 40px;background-color: #fff;}
 .app_bgcolor {background-color: #374761;box-shadow: none;}
 .app_content_bgc_login {background-color: #374761;}
 .app_content_bgc_phs {background-color: #374761;}
-.app_font_cl {color: #3d79f2;}
-.app_nav_text_center {text-align: center;line-height: 44px;}
-.app_li_text_linhg {line-height: 30px;}
-.app_text_center {text-align: center;}
-.app_text_indt10 {text-indent: 10px;}
-.app_text_indt15 {text-indent: 15px;}
-.app_text_alg_r {text-align: right;}
 .labelLf {padding: 10px 14px;padding-left: 20px;line-height: 21px;width: 35%;font-weight: bold;}
 .labelri {width: 60%;float: right;padding: 14px 15px;height: auto;line-height: 21px;font-size: 16px;}
 .labelPto {width:30%}
