--- a/src/main/webapp/static/mobile/css/app.css
+++ b/src/main/webapp/static/mobile/css/app.css
@@ -8,7 +8,6 @@ address, caption, cite, code, dfn, em, th, var{font-style:normal;font-weight:nor
 ol, ul{list-style:none;}
 q:before, q:after{content:''}
 abbr, acronym,button{border:0;}
-a{color:#3d79f2;touch-action: none;}
 input, select, textarea{font-size: 15px;}
 
 /*==自定义图标==*/
@@ -649,10 +648,10 @@ body{font-size: 15px;color:#3b3b3b;}
 .listBlue>li {border-bottom: 1px solid #40ABE9;}
 
 
-/*订单详情---产品信息*/
-.commodity label {width: 40%;}
-.mui-input-row label~input, .commodity input {width: 60%;}/*--被覆盖了*/
-/*订单详情---产品信息---一列样式:*/
+/*订单详情---产品信息----两列样式：*/
+.commodity div.mui-input-row label {width: 40%;}
+.commodity div.mui-input-row input {width: 60%;}
+/*订单详情---产品信息--- 一列样式:*/
 .commodity div.lineStyle label {width:20%}
 .commodity div.lineStyle input {width:80%}
 
@@ -672,3 +671,23 @@ input[disabled],input:disabled,input.disabled{
 	-webkit-opacity:1;
 	opacity: 1;
 }
+
+/*滑动---阻止默认事件*/
+a, #list {touch-action: none;}
+
+
+/*radio*/
+input[type=radio].inputRadio {-webkit-appearance: none;
+position: relative;
+top: -2px;
+width: 14px;
+height: 14px;
+border: 1px solid #999;
+-webkit-border-radius: 7px;
+border-radius: 7px;
+background-color: #fff;
+vertical-align: middle;}
+input[type="radio"].inputRadio:checked {
+-webkit-appearance: none; 
+border-color: #40ABE9;
+background-color: #40ABE9;}
