--- a/src/main/webapp/static/mobile/css/app.css
+++ b/src/main/webapp/static/mobile/css/app.css
@@ -567,6 +567,7 @@ body{font-size: 15px;color:#3b3b3b;}
 .app_dialog_list_box .app_lines span{background: #fff;padding: 0 15px;position: relative;top:-7px}
 
 /*自定义覆盖样式!*/
+.mui-table-view-cell.mui-collapse .mui-collapse-content {padding: 0 15px;}/*management.html*/
 .noneTxt {position: absolute;top: 50%;left: 50%;margin-left: -28px;}/*暂无数据样式*/
 .flowPath>li:last-child {color: #40ABE9;}/*流程最后一块内容*/
 .photoParent {width: 15%;height: 220px;margin-right: 15px;}
@@ -649,10 +650,10 @@ body{font-size: 15px;color:#3b3b3b;}
 .app_bnp {padding: 0 !important;}
 
 /*运营管理*/
-.mui-table-view-cell p {border-bottom: 1px solid #e8e8e8;padding: 8px 0 8px;}
+.mui-table-view-cell p {border-bottom: 1px solid #e8e8e8;padding: 10px 15px 9px;}
 
 /*审核公共样式*/
-.app_p20 button {margin-left: 17%;background-color: #40ABE9;color: #fff;}
+#staOrdCheckBtn button {background-color: #40ABE9;color: #fff;width: 35%;}
 
 /*订单详情---产品信息----两列样式：*/
 .commodity div.mui-input-row label {width: 40%;}
@@ -678,11 +679,11 @@ input[disabled],input:disabled,input.disabled{color: #000;/*-webkit-text-fill-co
 a, #list  {touch-action: none;}
 
 /*改变 ios 默认radio样式 */
-input[type=radio].inputRadio {-webkit-appearance: none;position: relative;top: -1px;width: 15px;height: 15px;border: 1px solid #999;-webkit-border-radius: 7px;border-radius: 7px;background-color: #fff;vertical-align: middle;}
-input[type="radio"].inputRadio:checked {-webkit-appearance: none; border-color: #40ABE9;background-color: #40ABE9;}
+input[type=radio].inputRadio {-webkit-appearance: none;position: relative;top: -1px;width: 15px;height: 15px;border: 1px solid #999;-webkit-border-radius: 50%;border-radius: 50%;background-color: #fff;vertical-align: middle;}
+input[type="radio"].inputRadio:checked {-webkit-appearance: none;background-color: #40ABE9;}
 /*查询---测试数据*/
 /*改变 ios 默认checkbox样式 */
-input[type=checkbox].testCheckbox {-webkit-appearance: none;position: relative;top: 10px;width: 20px;height: 20px;border: 1px solid #999;-webkit-border-radius: 10px;border-radius: 10px;background-color: #fff;vertical-align: middle;float: left;}
-input[type="checkbox"].testCheckbox:checked {-webkit-appearance: none;background-color: #ccc;}
+input[type=checkbox].testCheckbox {-webkit-appearance: none;position: relative;top: 12px;width: 17px;height: 17px;border: 1px solid #999;-webkit-border-radius: 50%;border-radius: 50%;background-color: #fff;vertical-align: middle;float: left;}
+input[type="checkbox"].testCheckbox:checked {-webkit-appearance: none;background-color: #40ABE9;}
 
 /*.mui-input-row input.testCheckbox {height: 20px;margin: 10px 210px 10px 0;width: 20px;}*/
