--- a/src/main/webapp/static/mobile/css/app.css
+++ b/src/main/webapp/static/mobile/css/app.css
@@ -585,6 +585,8 @@ body{font-size: 15px;color:#3b3b3b;}
 /*.labelri input {margin-left: 15px;}*//*redio*/
 .photoList {margin-left: 33%;}
 .step_num {text-align: center;color: #007aff;}
+
+.step_items {border: 1px #3daae9 solid;margin: 6px 6px;}
 .step_item {border: 1px #3daae9 solid;margin: 15px;}/*流程蓝色边框*/
 .oneBtn {left: 50%;margin-left: -41px;}
 .list-padding {padding: 10px 10px 0 10px;}
@@ -631,9 +633,9 @@ body{font-size: 15px;color:#3b3b3b;}
 /*备货单支付*/		
 .pay-logo {width: 40px;}
 .pay-txt {float: right;padding: 9px;width: 80%;}
-.pay-txt>input {position: absolute;right: 55px;}	
-	
-/*备货单添加和修改--备货商品	*/		
+.pay-txt>input {position: absolute;right: 55px;}
+
+/*备货单添加和修改--备货商品	*/
 /*.inputClassAdd>label.commodityName {padding: 0;font-size: 10px;width: 20%;}
 .inputClassAdd>input.commodityTxt {padding: 0;font-size: 10px;width: 80%;position: relative;}*/
 /*备货单所有备货商品*/
