--- a/src/main/webapp/static/mobile/css/app.css
+++ b/src/main/webapp/static/mobile/css/app.css
@@ -586,7 +586,6 @@ body{font-size: 15px;color:#3b3b3b;}
 .photoList {margin-left: 33%;}
 .step_num {text-align: center;color: #007aff;}
 
-.step_items {border: 1px #3daae9 solid;margin: 6px 6px;}
 .step_item {border: 1px #3daae9 solid;margin: 15px;}/*流程蓝色边框*/
 .oneBtn {left: 50%;margin-left: -41px;}
 .list-padding {padding: 10px 10px 0 10px;}
@@ -640,6 +639,10 @@ body{font-size: 15px;color:#3b3b3b;}
 .inputClassAdd>input.commodityTxt {padding: 0;font-size: 10px;width: 80%;position: relative;}*/
 /*备货单所有备货商品*/
 .inComdty div.mui-input-row input, .inComdty div.mui-input-row label {padding: 0;font-size: 12px;}
+/*备货单详情---支付列表*/
+.payList {border: 1px #3daae9 solid;margin:0 15px 15px 15px;padding: 0;}
+.payList div.mui-input-row label {width: 42%;padding-right: 0;}
+.payList div.mui-input-row input {width: 58%;}
 /*备货单详情---备货商品*/
 .inDetailComdty div.mui-input-row label {width: 32%;}
 .inDetailComdty div.mui-input-row input {width: 68%;}
