--- a/src/main/webapp/static/mobile/css/app.css
+++ b/src/main/webapp/static/mobile/css/app.css
@@ -695,6 +695,14 @@ a, #list  {touch-action: none;}
 /*改变 ios 默认radio样式 */
 input[type=radio].inputRadio {-webkit-appearance: none;position: relative;top: -1px;width: 15px;height: 15px;border: 1px solid #999;-webkit-border-radius: 50%;border-radius: 50%;background-color: #fff;vertical-align: middle;}
 input[type="radio"].inputRadio:checked {-webkit-appearance: none;background-color: #40ABE9;}
+/*查询---radio*/
+.searchRadioBody {padding: 10px 15px;font-weight: bold;}
+input[type=radio].searchRadio {-webkit-appearance: none;position: relative;top: 12px;width: 17px;height: 17px;border: 1px solid #999;-webkit-border-radius: 50%;border-radius: 50%;background-color: #fff;vertical-align: middle;margin-left: 2px;margin-right: 15px;}
+input[type="radio"].searchRadio:checked {-webkit-appearance: none;background-color: #40ABE9;}
+/*input[type=radio].searchRadio {-webkit-appearance: none;position: relative;top: 12px;width: 17px;height: 17px;border: 1px solid #999;-webkit-border-radius: 50%;border-radius: 50%;background-color: #fff;vertical-align: middle;float: left;}
+input[type="radio"].searchRadio:checked {-webkit-appearance: none;background-color: #40ABE9;}*/
+
+
 /*查询---测试数据*/
 /*改变 ios 默认checkbox样式 */
 input[type=checkbox].testCheckbox {-webkit-appearance: none;position: relative;top: 12px;width: 17px;height: 17px;border: 1px solid #999;-webkit-border-radius: 50%;border-radius: 50%;background-color: #fff;vertical-align: middle;float: left;}
