备货单添加

--- a/src/main/webapp/static/mobile/css/app.css
+++ b/src/main/webapp/static/mobile/css/app.css
@@ -233,6 +233,7 @@ a:hover{text-decoration:none;}
 .app_pl3em{padding-left:3em;}
 .app_pl05em{padding-left:.5em;}
 
+.app_pr0{padding-right: 0;}
 .app_pr5{padding-right: 5px;}
 .app_pr10{padding-right: 10px;}
 .app_pr15{padding-right: 15px;}
