--- a/src/main/webapp/static/mobile/css/app.css
+++ b/src/main/webapp/static/mobile/css/app.css
@@ -634,13 +634,10 @@ body{font-size: 15px;color:#3b3b3b;}
 .photoParents {margin-top: 13%;margin-left:10px;}
 .photoParents img {width: 50px;}
 /*备货单支付*/		
-.pay-logo {width: 40px;margin-left: 20px;}
+/*.pay-logo {width: 40px;margin-left: 20px;}
 .pay-txt {float: right;padding: 9px;width: 65%;}
-.pay-txt>input {position: absolute;right: 55px;}	
+.pay-txt>input {position: absolute;right: 55px;}	*/
 	
-/*备货单添加和修改--备货商品	*/		
-/*.inputClassAdd>label.commodityName {padding: 0;font-size: 10px;width: 20%;}
-.inputClassAdd>input.commodityTxt {padding: 0;font-size: 10px;width: 80%;position: relative;}*/
 /*备货单所有备货商品*/
 .inComdty div.mui-input-row input, .inComdty div.mui-input-row label {padding: 0;font-size: 12px;}
 /*备货单详情---支付列表*/
@@ -654,8 +651,12 @@ body{font-size: 15px;color:#3b3b3b;}
 .mui-content .inProduction label {width: 30%;}
 .mui-content .inProduction input {width: 70%;}
 
-/*备货单详情---备注*/
-.mui-input-row textarea {width: 66%;border: 1px solid #ccc;border-radius: 5px;margin: 5px 15px 5px -5px;}
+/*备货单---货号查询 clear*/
+.mui-input-group .commodityClear .mui-input-clear~.mui-icon-clear {right: 4em;}
+
+/*备货单---备注*/
+.mui-input-group div.remark label {width: 30%;}
+.mui-input-group div.remark label~textarea {width: 66%;border: 1px solid #ccc;border-radius: 5px;margin: 5px 15px 5px -5px;}
 
 /*备货单添加、修改---备货商品*/
 .inAddComdty div.mui-row li {padding: 5px;list-style: none;height: 30px;border-bottom: 1px solid #efeff4;}
@@ -679,7 +680,9 @@ body{font-size: 15px;color:#3b3b3b;}
 .clear {clear: both;}
 .app_bnp {padding: 0 !important;}
 
-/*运营管理*/
+
+
+/*======运营管理======*/
 .mui-table-view-cell p {border-bottom: 1px solid #e8e8e8;padding: 10px 15px 9px;}
 
 /*审核公共样式*/
