--- a/src/main/webapp/static/mobile/css/app.css
+++ b/src/main/webapp/static/mobile/css/app.css
@@ -147,6 +147,7 @@ input, select, textarea{font-size: 15px;}
 .app_rline2{border-right: 1px solid rgba(255,255,255,.5);}
 
 .app_bline3{border-bottom: 1px solid #efeff4;}
+.app_bline4{border-top: 5px solid #efeff4;}
 /*背景色*/
 .footClass {background-color: #40ABE9;}
 .app_bgf{background-color: #fff}
@@ -705,6 +706,9 @@ body{font-size: 15px;color:#3b3b3b;}
 .commodity div.lineStyle input {width:80%}
 #foot{display: flex;}
 #foot div{flex: 7;}
+.app_bline4 .mui-row label{width:100px;display:inline-block;float:left;}
+.app_bline4 .mui-row input{width:60px;display:inline-block;float:left;}
+.app_bline4 .mui-row #scolor{color:#E45038;width:100px;}
 /*进展信息*/
 .nextTxt01 {top: 17px;left: 88px;}
 .nextTxt02 {top: 6px;left: 87px;}
