订单管理修改

--- a/src/main/webapp/static/mobile/css/app.css
+++ b/src/main/webapp/static/mobile/css/app.css
@@ -706,6 +706,8 @@ body{font-size: 15px;color:#3b3b3b;}
 .commodity div.lineStyle input {width:80%}
 #foot{display: flex;}
 #foot div{flex: 7;}
+/*订单管理--备注:*/
+.mui-input-row .staPoRemark{border: 1px solid #ccc;margin:5px 5px 5px -5px;border-radius: 5px;width:45%;float:left}
 .app_bline4 .mui-row label{width:100px;display:inline-block;float:left;}
 .app_bline4 .mui-row input{width:60px;display:inline-block;float:left;}
 .app_bline4 .mui-row #scolor{color:#E45038;width:100px;}
