--- a/src/main/webapp/static/mobile/css/app.css
+++ b/src/main/webapp/static/mobile/css/app.css
@@ -707,7 +707,8 @@ body{font-size: 15px;color:#3b3b3b;}
 #foot{display: flex;}
 #foot div{flex: 7;}
 /*订单管理--备注:*/
-.mui-input-row .staPoRemark{border: 1px solid #ccc;margin:5px 5px 5px -5px;border-radius: 5px;width:45%;float:left}
+.mui-input-row .staPoRemark{border: 1px solid #ccc;margin:5px 5px 5px -5px;border-radius: 5px;width:45%;float:left;overflow: auto;height:80px}
+.step_items {margin: 4px;margin-top: 0;font-size: 12px;border-bottom: 1px solid #ccc;color:#000;}
 .app_bline4 .mui-row label{width:100px;display:inline-block;float:left;}
 .app_bline4 .mui-row input{width:60px;display:inline-block;float:left;}
 .app_bline4 .mui-row #scolor{color:#E45038;width:100px;}
