--- a/src/main/webapp/static/mobile/css/app.css
+++ b/src/main/webapp/static/mobile/css/app.css
@@ -607,7 +607,8 @@ body{font-size: 15px;color:#3b3b3b;}
 .pre {margin-bottom: 0;padding-left: 0;float: right;width: 62%;}
 .newinput {width: 150px;padding: 2px 0px 2px 0px;margin-bottom: -1px;background: url(./thumb.jpg) no-repeat scroll right center;border: 1px solid #ccc;box-shadow: 0 1px 0 0 #eee inset;cursor: default;}
 .input_div {width: 150px;border: 1px solid #ddd;border-bottom: none;border-radius: 0 0 3px 3px;display: none;}
-.hideSpan {position: absolute;right: 52px;top: 7px;border: 1px solid rgb(204, 204, 204);border-radius: 13px;display: none;}
+.hideSpan {position: absolute;right: 52px;top: 8px;border-radius: 13px;display: none;}
+.showSpan {position: absolute;right: 52px;top: 8px;border-radius: 13px;}
 .secStyle {margin: 5px 0;} 
 .newinput:focus {cursor: text;}
 .soption {display: block;padding: 2px 5px;}
